syntax = "proto3";
import "google/protobuf/empty.proto";
option go_package = ".:proto";

message PageInfo {
    uint32 pn = 1;
    uint32 psize = 2;
    
}

message UserListResponse{
    int32 total = 1;
    repeated UserInfoResponse data = 2;

}

message UserInfoResponse {
    int32 id = 1;
    string password = 2;
    string mobile = 3;
    string nickName = 4;
    uint64 birthDay = 5;
    string gendr = 6;
    int32 role = 7;
}

message MobileRequest{
    string mobile = 1;
}

message IdRequest{
    int32 id = 1;
}

message CreateUserInfo{
    string nickName = 1;
    string password = 2;
    string mobile = 3;
}

message UpdateUserInfo{
    int32 id =1;
    string nickName = 2;
    string gendr = 3;
    uint64 birthDay = 4;

}

message PasswordCheckInfo{
    string password = 1;
    string encryptedPassword = 2;
}

message CheckResponse{
    bool success = 1;
}

service User{
    rpc GetUserList(PageInfo) returns (UserListResponse); // 用户列表
    rpc GetUserByMobile(MobileRequest) returns (UserInfoResponse);//通过手机查询用户
    rpc GetUserById(IdRequest) returns (UserInfoResponse);//通过id查询用户
    rpc CreateUser(CreateUserInfo) returns(UserInfoResponse);//添加用户
    rpc UpdateUser(UpdateUserInfo) returns(google.protobuf.Empty);//更新用户
    rpc CheckPassWord(PasswordCheckInfo) returns (CheckResponse);//检查密码
}

